--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
+    <!-- font awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css" integrity="sha256-PF6MatZtiJ8/c9O9HQ8uSUXr++R9KBYu4gbNG5511WE=" crossorigin="anonymous"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Group</title>
